--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,7 +7,7 @@ phases:
     commands:
     - echo Logging in to Amazon ECR...
     - aws --version
-    - $(aws ecr get-login-password --region $AWS_DEFAULT_REGION )
+    - $(aws ecr get-login-password --region $AWS_DEFAULT_REGION docker login --username AWS --password-stdin 317225729511.dkr.ecr.us-east-1.amazonaws.com)
     - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
     - IMAGE_URI=${REPOSITORY_URI}:${TAG}
   build:
